About to debug json parsing of new structure

--- a/force-app/main/default/classes/CsvDataImportBatch.cls
+++ b/force-app/main/default/classes/CsvDataImportBatch.cls
@@ -502,7 +502,7 @@ global class CsvDataImportBatch implements Database.Batchable<String>, Database.
 					compSmLookUp.TargetFieldsIndexes.add(this.fieldIndexes.get(fkPart.csvColumnName));
 				}
 
-				this.compositeSmartLookups.add(CompositeSmartLookup);
+				this.compositeSmartLookups.add(compSmLookUp);
 			}
 			else {
 				SmartLookup smLookUp = new SmartLookup();
